add hamburger modal

--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 				<div class="lower_footer">
 					<div class="copy_info">
 						<p>Copyright &copy; : Gripsense Solutuins. All Rights Reserved.</p>
+						<p>Powered by wisestMe</p>
+						
 					</div>
 
 					<div class="navigation">
@@ -126,5 +128,21 @@
 				</div>
 			</div>
 		</footer>
+		<div class="hamburger_modal">
+			<div class="container">
+				<div class="quick_links">
+					<nav>
+						<a href="">Home</a>
+						<a href="">About</a>
+						<a href="">Contact</a>
+						<a href=""></a>
+					</nav>
+				</div>
+				<div class="copy_info">
+						<p>Copyright &copy; : Gripsense Solutuins. All Rights Reserved.</p>
+						<p>Powered by wisestMe</p>
+					</div>
+			</div>
+		</div>
 	</body>
 </html>
