add responsiveness for header, footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="hamburger_menu">
+				<div class="hamburger_menu no_medium">
 					<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg>
 				</div>
 				<div class="upper_header">
@@ -51,7 +51,7 @@
 					</div>
 				</div>
 				<div class="lower_header">
-					<nav class="no_small">
+					<nav class="no_small flex">
 						<a href="index.html">Home</a>
 						<a href="about.html">About</a>
 						<a href="contact.html">Contact Us</a>
