add subscription section

--- a/index.html
+++ b/index.html
@@ -66,12 +66,22 @@
 				<h2>GRIPSENSE SOLUTIONS LIMITED</h2>
 				<h3>Coming Soon</h3>
 			</div>
+			<section id="subscribe">
+				<div class="container">
+					<h2>Get latest updates</h2>
+					<form action="">
+						<label for="subscribe" class="no_vision">Enter your email</label>
+						<input id="subscribe" type="text" placeholder="Enter your email">
+						<input type="submit" value="Subscribe">
+					</form>
+				</div>
+			</section>
 		</main>
 
 		<footer>
 			<div class="container">
-				<div class="upper_footer">
-					<div class="profile">
+				<div class="upper_footer flex_med flex_col_small">
+					<div class="profile flex_col_small">
 						<div class="footer_logo flex">
 							<img src="./images/gripsense_logo.png" alt="Company logo">
 							<div class="text">
@@ -98,10 +108,10 @@
 							</div>
 						</div>
 					</div>
-					<div>
-						<!-- No plans yet -->
-					</div>
-					<div>
+					<!-- <div >
+						No plans yet
+					</div> -->
+					<div class="location">
 						<h3>Get in touch</h3>
 						<div class="contact_details">
 							<p>Email:
@@ -119,7 +129,7 @@
 					</div>
 				</div>
 				<hr>
-				<div class="lower_footer">
+				<div class="lower_footer flex_med">
 					<div class="navigation">
 						<nav class="flex">
 							<a href="index.html">Home</a>
@@ -130,10 +140,10 @@
 
 					<div class="copy_info">
 						<p>Copyright &copy; 2020 Gripsense Solutions. All Rights Reserved.</p>
-						<p>Powered by <span class="wisest">wisestMe<span></p>
-
 					</div>
+					
 				</div>
+				<p>Powered by <span class="wisest">wisestMe<span></p>
 			</div>
 		</footer>
 		<div class="hamburger_modal">
