add form submission to subscription

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 			<section id="subscribe">
 				<div class="container">
 					<h2>Get latest updates</h2>
-					<form action="">
-						<label for="subscribe" class="no_vision">Enter your email</label>
-						<input id="subscribe" type="text" placeholder="Enter your email">
+					<form action="https://formspree.io/xwkrjvrl" method="POST">
+						<label for="email" class="no_vision">Enter your email</label>
+						<input name="customer_email" id="email" type="text" placeholder="Enter your email">
 						<input type="submit" value="Subscribe">
 					</form>
 				</div>
