--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 						<div>
 						<div class="slider_item showcase slider_one">
 							<div class="">
-								<h2>Any phone problem?</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam saepe, quasi temporibus voluptatum architecto corporis placeat excepturi modi explicabo! Assumenda sunt incidunt, saepe quam numquam!</p>
+								<h2><span>Empathy</h2></span>
+								<p>We are always conscious of your need to have your device restored to perfect working condition as soon as possible.</p>
 								<!-- <figure>
 									<img src="./images/technician.png" alt="">
 									<figcaption class="no_vision">A technician doing repair work</figcaption>
@@ -88,8 +88,8 @@
 						<div>
 						<div class="slider_item showcase slider_two">
 							<div class="">
-								<h2>Any phone problem?</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam saepe, quasi temporibus voluptatum architecto corporis placeat excepturi modi explicabo! Assumenda sunt incidunt, saepe quam numquam!</p>
+								<h2>Finding <span>Solutions?</span></h2>
+								<p>Be rest assured of our commitment to ensuring your maximum satisfaction.</p>
 								<!-- <figure>
 									<img src="./images/news-1.jpg" alt="">
 									<figcaption class="no_vision">A technician doing repair work</figcaption>
@@ -102,8 +102,8 @@
 						<div>
 						<div class="slider_item showcase slider_three">
 							<div class="">
-								<h2>Any phone problem?</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam saepe, quasi temporibus voluptatum architecto corporis placeat excepturi modi explicabo! Assumenda sunt incidunt, saepe quam numquam!</p>
+								<h2><span>Quality</span> Service Delivery</h2>
+								<p>We never compromise on quality because you deserve nothing less than the best.</p>
 								<!-- <figure>
 									<img src="./images/news-2.jpg" alt="">
 									<figcaption class="no_vision">A technician doing repair work</figcaption>
